--- a/src/app/layout/auth/header/header.component.html
+++ b/src/app/layout/auth/header/header.component.html
@@ -1,13 +1,12 @@
-<section class="amazonheader" fxLayout="row" fxLayoutAlign="start center">
+<section class="amazonheader" fxLayout="row" fxLayoutAlign="start center" ngClass.xs="amazonheader1" 
+ngClass.sm="amazonheader2"  ngClass.md="amazonheader3">
     <div class="header" fxLayout="row" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px"
         fxFlex.xl="1910px">
         <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100%">
-            <div class="logo" fxFlex="20%">
+            <div class="logo" fxFlex="40%">
                 amz Review
             </div>
-            <div class="" fxFlex="20%">
           
-                </div>
             <div class="search" fxFlex="60%" fxLayout="row" fxLayoutAlign="start center">
                     <div class="menu" fxFlex="20%">
                             <mat-icon>list</mat-icon> <button class="allcates" mat-button [matMenuTriggerFor]="menu">
