--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
-<section class="home" fxLayout="column">
+<section class="home" fxLayout="column"  ngClass.xs="amazonhome1" 
+ngClass.sm="amazonhome2"  ngClass.md="amazonhome3">
 
     <div class="slide">
         <div class="slide-amazon" fxLayout="row" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px"
@@ -349,9 +350,10 @@
 
     <!----------top-deal-------------->
     <div class="new-featured-amazon">
-        <div class="new featured-amazon" fxLayout="row" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
+        <div class="new featured-amazon" fxLayout="row" fxLayout.xs="column" 
+        fxLayout.sm="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
             fxFlex.lg="1270px" fxFlex.xl="1910px">
-            <div class="img-slider" fxFlex="24%">
+            <div class="img-slider" fxFlex="24%" fxFlex.xs="99%%" fxFlex.sm="99%">
                 <div class="slide1-img">
                     <h3>Up to 50% off | Like new products</h3>
                     <img
@@ -360,7 +362,7 @@
                     </p>
                 </div>
             </div>
-            <div class="img-slider" fxFlex="24%">
+            <div class="img-slider" fxFlex="24%" fxFlex.xs="99%%" fxFlex.sm="99%">
                 <div class="slide1-img">
                     <h3>Up to 50% off | Like new products</h3>
                     <img
@@ -369,7 +371,7 @@
                     </p>
                 </div>
             </div>
-            <div class="img-slider" fxFlex="24%">
+            <div class="img-slider" fxFlex="24%" fxFlex.xs="99%%" fxFlex.sm="99%">
                 <div class="slide1-img">
                     <h3>Up to 50% off | Like new products</h3>
                     <div class="slide1-img">
@@ -380,7 +382,7 @@
                     </div>
                 </div>
             </div>
-            <div class="img-slider" fxFlex="24%">
+            <div class="img-slider" fxFlex="24%" fxFlex.xs="99%%" fxFlex.sm="99%">
                 <div class="slide1-img">
                     <h3>Up to 50% off | Like new products</h3>
                     <div class="slide1-img">
