--- a/src/app/layout/home/home.component.scss
+++ b/src/app/layout/home/home.component.scss
@@ -135,21 +135,21 @@
     flex-wrap: wrap;
 }
 .Product-featured .Product {
-    width: 20%;
+    width: 23.2%;
     display: flex;
     flex-direction: column;
     place-content: center;
     align-items: center;
-}
-.product-data {
-    padding: 3pc 1pc 0;
-    place-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
     margin: 0px 0.7pc 25px;
     box-shadow: 1px 1px 4px 1px #ddd;
-    padding: 15px;
+}
+.product-data {
+    place-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    padding: 15px 0;
+    width: 100%;
 }
 .product-data a {
     width: 200px;
@@ -224,4 +224,52 @@ button.more mat-icon {
     position: relative;
     left: 2px;
     top:1px;
+}
+
+section.home.amazonhome1 .slide:before {
+    width: 100%;
+}
+section.home.amazonhome1 .slide-img {
+    display: none !important;
+}
+section.home.amazonhome1 .slide-text{
+    padding: 0px 1.5pc;
+    position: relative;
+    color: #fff;
+}
+section.home.amazonhome1 .slide{
+    height:400px;
+}
+section.home.amazonhome1 .slide-text button {
+    background: #fdfdfd;
+    color: #252323;
+}
+section.home.amazonhome1 .Product-featured .Product {
+    width: 100%;
+    margin: 20px 0;
+    margin: 9px auto 9px;
+}
+section.home.amazonhome2 .Product-featured .Product {
+    width:46.2%;
+}
+section.home.amazonhome3 .Product-featured .Product {
+    width: 30.9%;
+}
+section.home.amazonhome1 .start{
+    padding: 17px 7px 12px 7px;
+}
+
+section.home.amazonhome1 .new-featured-amazon {
+    padding: 2pc 0 0pc;
+}
+section.home.amazonhome2 .new-featured-amazon {
+    padding: 2pc 0 0pc;
+}
+
+section.home.amazonhome2 .slide-text {
+    padding: 0px 3pc;
+}
+section.home.amazonhome2 .slide-amazon img {
+    height: 100%;
+    width: 92.6%;
 }
