--- a/src/app/layout/auth/header/header.component.scss
+++ b/src/app/layout/auth/header/header.component.scss
@@ -1,7 +1,6 @@
 section.amazonheader {
     background: #0a0a0b;
     padding: 6px;
-    margin-bottom: 15px;
 }
 .header {
     margin: auto;
@@ -101,4 +100,7 @@ form.example-form mat-icon.mat-icon {
     font-size: 14px;
     height: auto;
     margin: 1px 4px;
+}
+.amazonheader1 .search mat-icon.mat-icon {
+    padding: 3.3pc 8px 0;
 }
