--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -20,34 +20,46 @@
 
 
     <div class="category">
-        <div class="cate-amazon" fxLayout="row"  fxLayout.xs="column" >
+        <div class="cate-amazon" fxLayout="row" fxLayout.xs="column">
             <div class="cate-img left1" fxFlex="40%" fxFlex.xs="100%" fxFlex.sm="100%">
                 <h3>All Fashion</h3>
-                <p>Sitamet, consectetur adipiscing elit, sed do eiusmod tempor incidid-unt labore edolore magna
-                    aliquapendisse ultrices gravida.</p>
-                <b>Shop Now</b>
+                <p>Purchase Women's Clothes handpicked by style specialists on the Amazon</p>
+                <a target="_blank"
+                    href="https://www.amazon.in/gp/bestsellers/apparel?_encoding=UTF8&linkCode=ib1&tag=stackasian-21&linkId=07d4225b3d4856f46549a58179aecedf&ref_=ihub_curatedcontent_c71318f9-d59d-4bc1-bc5a-6fdf0c0257fc">
+                    Shop Now</a>
             </div>
             <div class="cate-img" fxFlex="60%" fxFlex.xs="100%" fxFlex.sm="100%" fxLayout="row">
                 <div class="two-cate" fxLayout="column" fxFlex="50%">
                     <div class="right1 allcate">
-                        <h3>All Fashion</h3>
-                        <b>Shop Now</b>
+                        <h3>Best Ofiice Products</h3>
+                        <a target="_blank"
+                            href="https://www.amazon.in/gp/bestsellers/office?_encoding=UTF8&linkCode=ib1&tag=stackasian-21&linkId=8c9232753a401575bd7eb7e03d504128&ref_=ihub_curatedcontent_8f708d9a-64ce-4bed-85b7-94f94d716dc2">
+                            Shop Now</a>
+                        <!-- <b>Shop Now</b> -->
                     </div>
                     <div class="right2 allcate">
-                        <h3>All Fashion</h3>
-                        <b>Shop Now</b>
+                        <h3> Best Electronics Products </h3>
+                        <a target="_blank"
+                            href="https://www.amazon.in/gp/bestsellers/electronics?_encoding=UTF8&linkCode=ib1&tag=stackasian-21&linkId=8daf83ed68c42f86005af4cca04a3788&ref_=ihub_curatedcontent_77c1e3ed-d73a-4007-95f7-f90c6eda3fb5">
+                            Shop Now</a>
                     </div>
                 </div>
                 <div class="two-cate" fxLayout="column" fxFlex="50%">
                     <div class="right11 allcate">
-                        <h3>All Fashion</h3>
-                        <b>Shop Now</b>
+                        <h3>Best Sellers in Home & Kitchen</h3>
+                        <a target="_blank"
+                            href="https://www.amazon.in/gp/bestsellers/kitchen?_encoding=UTF8&linkCode=ib1&tag=stackasian-21&linkId=61408a008c1d530fac8b38051ba6500c&ref_=ihub_curatedcontent_2e530050-9472-4d77-97b5-c487432167c5">Shop
+                            Now</a>
                     </div>
                     <div class="right12 allcate">
-                        <h3>All Fashion</h3>
-                        <b>Shop Now</b>
+                        <h3>Best Sellers in Beauty</h3>
+                        <a target="_blank"
+                            href="https://www.amazon.in/gp/bestsellers/beauty?_encoding=UTF8&linkCode=ib1&tag=stackasian-21&linkId=ede907e959a7eb028b0c4d7b8397c252&ref_=ihub_curatedcontent_e7b9e653-4711-4332-ae1a-8e2c3724cc74">Shop
+                            Now</a>
                     </div>
                 </div>
+
+
             </div>
         </div>
     </div>
@@ -65,22 +77,17 @@
             <div class="Product-featured" fxLayout="row">
                 <div class="Product">
                     <div class="product-data">
-                        <a href="https://www.amazon.in/dp/B081M9S7JB?smid=A2IMXMX2I0MD9T&pf_rd_p=daa47517-5bef-4e97-b82e-ec3e7d37859c&pf_rd_s=slot-5&pf_rd_t=701&pf_rd_i=gb_main&pf_rd_m=A1VBAL9TL5WCBF&pf_rd_r=XD822F0H6X13GCMQJ637&linkCode=li2&tag=stackasian-21&linkId=2840efe8454a84174dbdedbe262aaf76&ref_=as_li_ss_il"
-                            target="_blank"><img border="0"
-                                src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B081M9S7JB&Format=_SL160_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=stackasian-21"></a><img
-                            src="https://ir-in.amazon-adsystem.com/e/ir?t=stackasian-21&l=li2&o=31&a=B081M9S7JB"
-                            width="1" height="1" border="0" alt=""
-                            style="border:none !important; margin:0px !important;" />
-                        <h4>Timewear Analogue </h4>
+                        <a href="https://www.amazon.in/dp/B08L5WHFT9?&linkCode=li3&tag=stackasian-21&linkId=2ebacfa51f6ae8cb07ea47d683617b27&ref_=as_li_ss_il" target="_blank"><img border="0" src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B08L5WHFT9&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=stackasian-21" ></a><img src="https://ir-in.amazon-adsystem.com/e/ir?t=stackasian-21&l=li3&o=31&a=B08L5WHFT9" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+                        <h4> iphone 12 </h4>
                         <div class="price">
-                            <u>₹ 2,199.00</u> ₹ 340.00
+                            <u>₹ 79,900.00</u> ₹ 79,649.00
                         </div>
 
                         <div class="start">
                             <div class="img" fxLayout="row">
                                 <img
                                     src="https://images-eu.ssl-images-amazon.com/images/S/amazon-avatars-global/default._CR0,0,1024,1024_SX48_.png">
-                                <b>sapna</b>
+                                <b>S.Siva Ram Kris</b>
                             </div>
                             <div class="star">
                                 <div class="review">
@@ -91,7 +98,7 @@
                                     <mat-icon>star</mat-icon>
                                 </div>
                                 <div class="reviewd">
-                                    <p> If you will not buy it, you will miss it.</p>
+                                    <p> Another magnificence from Apple. I was updated from iPhone X and it was an extraordinary involvement in all the most recent specs and impeccably smooth.</p>
                                 </div>
                             </div>
                         </div>
