--- a/src/app/layout/auth/header/header.component.html
+++ b/src/app/layout/auth/header/header.component.html
@@ -2,21 +2,17 @@
     ngClass.sm="amazonheader2" ngClass.md="amazonheader3">
     <div class="header" fxLayout="row" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px"
         fxFlex.xl="1910px">
-        <div class=top-line>
 
-        </div>
-        
-        
-        <div fxLayout="row" fxLayout.xs="column" fxLayoutAlign="start center" fxFlex="100%">
-            <div class="logo" fxFlex="23%" fxFlex.sm="25%" fxFlex.xs="100%">
-                <b>Reviews</b><br/><span>Stackasian</span>
+        <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column" fxLayoutAlign="start center" fxFlex="100%">
+            <div class="logo" fxFlex="23%" fxFlex.sm="25%" fxFlex.xs="100%"  fxFlex.sm="100%">
+                <a routerLink="/"> <b>Reviews</b><br /><span>Stackasian</span></a>
             </div>
 
-            <div class="search" fxFlex="50%" fxFlex.xs="100%" fxFlex.sm="75%" fxLayout="row"
+            <div class="search" fxFlex="50%" fxFlex.xs="100%" fxFlex.sm="100%" fxLayout="row"
                 fxLayoutAlign="start center">
                 <div class="menu" fxFlex="22%" fxFlex.xs="33%" fxFlex.sm="35%">
-                  <button class="allcates" mat-button [matMenuTriggerFor]="menu">
-                        All Category <mat-icon>keyboard_arrow_down</mat-icon> 
+                    <button class="allcates" mat-button [matMenuTriggerFor]="menu">
+                        All Category <mat-icon>keyboard_arrow_down</mat-icon>
                     </button>
                     <mat-menu #menu="matMenu" class="menu_category">
                         <button mat-menu-item>
@@ -152,10 +148,10 @@
                     </mat-autocomplete>
                 </form>
             </div>
-            <div class="menus" fxFlex="27%" fxFlex.sm="25%" fxFlex.xs="100%">
+            <div class="menus" fxFlex="27%" fxFlex.sm="100%" fxFlex.xs="100%">
                 <ul>
-                    <li>Login / Register</li>
-                    <li><button>Write Review</button> </li>
+                    <li><span routerLink="/login">Login</span> / <span routerLink="/register">Register</span></li>
+                    <li routerLink="/review"><button>Write Review</button> </li>
                 </ul>
             </div>
 
