--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -29,7 +29,7 @@
                     Shop Now</a>
             </div>
             <div class="cate-img" fxFlex="60%" fxFlex.xs="100%" fxFlex.sm="100%" fxLayout="row">
-                <div class="two-cate" fxLayout="column" fxFlex="50%">
+                <div class="two-cate" fxLayout="column" fxFlex="50%" fxFlex.sm="100%">
                     <div class="right1 allcate">
                         <h3>Best Ofiice <br/>Products</h3>
                         <a target="_blank"
@@ -44,7 +44,7 @@
                             Shop Now</a>
                     </div>
                 </div>
-                <div class="two-cate" fxLayout="column" fxFlex="50%">
+                <div class="two-cate lastline" fxLayout="column" fxFlex="50%" fxFlex.sm="00%">
                     <div class="right11 allcate">
                         <h3>Offer in <br/>Home & Kitchen</h3>
                         <a target="_blank"
