--- a/src/app/layout/home/home.component.scss
+++ b/src/app/layout/home/home.component.scss
@@ -470,3 +470,18 @@ section.home.amazonhome2 .left1 {
 section.home.amazonhome2 .allcate {
     padding: 0 1pc;
 }
+section.home.amazonhome1 .allcate {
+    display: none;
+}
+section.home.amazonhome1 .new-featured-amazon.topdeal .Product {
+    width: 50% !important;
+}
+section.home.amazonhome1 .new-featured-amazon.arrive .Product {
+    width: 50% !important;
+}
+section.home.amazonhome1 .product-data a img {
+    width: 55%;
+}
+section.home.amazonhome2 .two-cate.lastline{
+    display: none !important;
+}
