--- a/src/app/layout/auth/header/header.component.html
+++ b/src/app/layout/auth/header/header.component.html
@@ -15,7 +15,7 @@
                         All Category <mat-icon>keyboard_arrow_down</mat-icon>
                     </button>
                     <mat-menu #menu="matMenu" class="menu_category">
-                        <button mat-menu-item>
+                        <button mat-menu-item routerLink="/category">
                             <mat-icon>keyboard_arrow_left</mat-icon>Deals
                         </button>
                         <button mat-menu-item>
