--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -104,7 +104,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="more">View More <mat-icon>double_arrow
+                        <button routerLink="/category" class="more">View More <mat-icon>double_arrow
                             </mat-icon></button>
                     </div>
                 </div>
@@ -179,7 +179,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="more">View More <mat-icon>double_arrow
+                        <button routerLink="/category" class="more">View More <mat-icon>double_arrow
                             </mat-icon></button>
                     </div>
                 </div>
@@ -217,7 +217,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="more">View More <mat-icon>double_arrow
+                        <button routerLink="/category" class="more">View More <mat-icon>double_arrow
                             </mat-icon></button>
                     </div>
                 </div>
@@ -256,7 +256,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="more">View More <mat-icon>double_arrow
+                        <button routerLink="/category" class="more">View More <mat-icon>double_arrow
                             </mat-icon></button>
                     </div>
                 </div>
@@ -294,7 +294,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="more">View More <mat-icon>double_arrow
+                        <button routerLink="/category" class="more">View More <mat-icon>double_arrow
                             </mat-icon></button>
                     </div>
                 </div>
@@ -332,7 +332,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="more">View More <mat-icon>double_arrow
+                        <button routerLink="/category" class="more">View More <mat-icon>double_arrow
                             </mat-icon></button>
                     </div>
                 </div>
@@ -370,7 +370,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="more">View More <mat-icon>double_arrow
+                        <button routerLink="/category" class="more">View More <mat-icon>double_arrow
                             </mat-icon></button>
                     </div>
                 </div>
