--- a/src/app/layout/auth/footer/footer.component.html
+++ b/src/app/layout/auth/footer/footer.component.html
@@ -1,4 +1,4 @@
-<section class="amazonfooter" fxLayout="row" fxLayoutAlign="start center">
+<section class="amazonfooter" ngClass.xs="amazonhome1" ngClass.sm="amazonhome2" ngClass.md="amazonhome3" fxLayout="row" fxLayoutAlign="start center">
     <div class="header" fxLayout="row" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px"
         fxFlex.xl="1910px">
         <p>Copyright ©2021 All rights reserved </p>
