--- a/src/app/layout/category/category.component.scss
+++ b/src/app/layout/category/category.component.scss
@@ -1,14 +1,17 @@
 
 //   <!----top-line-->
   .category-amazon{
-    margin:10px auto 2pc;
-    background: #000;
+    margin:10px auto 0pc;
     width: 100%;
     height: 55px;
-    color: #fff;
 }
 .top-line {
     margin: 0 auto;
+}
+.single-line .home{
+    cursor: pointer;
+    padding-left: 1pc;
+
 }
 .single-line {
     display: flex;
@@ -18,12 +21,17 @@
     font-family: "Open Sans", sans-serif;
     font-weight: 500;
     font-size: 12px;
+    color: #5e5e5e;
+
 }
 .single-line mat-icon {
     font-size: 15px;
     height: auto;
     width: 25px;
     text-align: center;
+    color: #5e5e5e;
+    position: relative;
+    top: 1px;
 }
 .category {
     margin: 0 auto;
@@ -79,12 +87,12 @@
 .addto-cart button {
     border: 0;
     background: #4571eb;
-    padding: 13px 2pc 13px;
+    padding: 11px 1.5pc 11px;
     border-radius: 27px;
     color: #fff;
     font-family: "Open Sans", sans-serif;
     margin: 0px 0 15px;
-    font-size: 14px;
+    font-size: 13px;
     display: flex;
     cursor: pointer;
     align-items: center;
