--- a/src/app/layout/home/home.component.scss
+++ b/src/app/layout/home/home.component.scss
@@ -313,7 +313,7 @@ button {
     align-items: center;
 }
 button.more:hover {
-    background: #f89468;
+    background: #7ac0a3;
 }
 button.more mat-icon {
     font-size: 12px;
@@ -501,3 +501,4 @@ section.home.amazonhome1 .product-data a img {
 section.home.amazonhome2 .two-cate.lastline{
     display: none !important;
 }
+
