--- a/src/app/layout/auth/footer/footer.component.scss
+++ b/src/app/layout/auth/footer/footer.component.scss
@@ -18,3 +18,6 @@ section.amazonfooter p {
     font-size: 13px;
     letter-spacing: 0.5px;
 }
+section.amazonfooter.amazonhome1 {
+    margin: 0;
+}
