--- a/src/app/layout/login/login.component.scss
+++ b/src/app/layout/login/login.component.scss
@@ -5,7 +5,7 @@ img {
     display: block;
 }
 .comming {
-    height:80%;
+    height:100vh;
     display: flex;
     place-content: center;
     align-items: center;
