--- a/src/app/layout/auth/header/header.component.scss
+++ b/src/app/layout/auth/header/header.component.scss
@@ -153,9 +153,7 @@ form.example-form mat-icon.mat-icon {
    text-decoration: underline;
 
 }
-.logo a {
-    text-decoration: none;
-    color: #000;
+.logo span {
     cursor: pointer;
 }
 ul li span {
