--- a/src/app/layout/home/home.component.scss
+++ b/src/app/layout/home/home.component.scss
@@ -118,7 +118,7 @@
 
 }
 .left1{
-background: url('https://preview.colorlib.com/theme/ashion/img/categories/category-1.jpg');
+background: url(../../../assets/images/deal01.jpg);
 background-position: center;
 background-size: cover;
 height: 520px;
