--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -727,5 +727,37 @@
                 </div>
             </div>
         </div>
+
+
+        <!-- <div  class="slider-home-page-multiple">
+                <ngu-carousel #myCarousel [inputs]="carouselConfig" [dataSource]="[first, second, third]">
+                        <div *nguCarouselDef="let item;" class="item">
+                            <div class="tile">
+                                <ng-container *ngTemplateOutlet="item"></ng-container>
+                            </div>
+                        </div>
+                    
+                        <ng-template #first>
+                            <p>First</p>
+                        </ng-template>
+                    
+                        <ng-template #second>
+                            <p>Second</p>
+                        </ng-template>
+                    
+                        <ng-template #third>
+                            <p>Third</p>
+                        </ng-template>
+                    
+                        <button NguCarouselNext class="rightRs">></button>
+                        <button NguCarouselPrev class="leftRs"><</button>
+                        <ul class="myPoint" NguCarouselPoint>
+                            <li *ngFor="let j of myCarousel.pointNumbers; let j = index" [class.active]="j==myCarousel.activePoint" (click)="myCarousel.moveTo(j)"></li>
+                        </ul>
+                    </ngu-carousel>
+              </div> -->
+
+
     </div>
 </section>
+
