--- a/src/app/layout/full-view/full-view.component.html
+++ b/src/app/layout/full-view/full-view.component.html
@@ -4,9 +4,9 @@
         <div class="top-line">
             <div class="single-line" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px"
                 fxFlex.xl="1910px">
-                <b  class="home"  routerLink="/">Home</b>
-                <mat-icon>keyboard_arrow_right</mat-icon> <b  class="home"  routerLink="/category"><a>Fashion</a></b>
-                <mat-icon>keyboard_arrow_right</mat-icon> <b><a>Fashion</a></b>
+                <b class="home" routerLink="/">Home</b>
+                <mat-icon>keyboard_arrow_right</mat-icon> <b class="home" routerLink="/category"><a>Products</a></b>
+                <mat-icon>keyboard_arrow_right</mat-icon> <b><a>Mobile</a></b>
             </div>
         </div>
     </div>
@@ -14,9 +14,9 @@
     <div class="category" fxLayout="row">
         <div class="category" fxLayout="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px"
             fxFlex.xl="1910px">
-            <div class="product-amazonall" fxLayout="row" >
+            <div class="product-amazonall" fxLayout="row">
                 <div class="product-amazon">
-                    <div class="product" fxLayout="row" fxLayout.xs="column"  fxLayout.sm="column" >
+                    <div class="product" fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
                         <div class="img" fxFlex="40%" fxFlex.xs="100%" fxFlex.sm="100%">
                             <a href="https://www.amazon.in/dp/B08L5WHFT9?&linkCode=li3&tag=stackasian-21&linkId=2ebacfa51f6ae8cb07ea47d683617b27&ref_=as_li_ss_il"
                                 target="_blank"><img border="0"
@@ -45,6 +45,33 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <div class="item-ad">
+                                <div class="heading">
+                                    <b>Wireless Carrier </b>
+                                    <p>Unlocked for All Carriers</p>
+                                </div>
+                                <div class="heading">
+                                    <b>Brand</b>
+                                    <p>Apple</p>
+                                </div>
+                                <div class="heading">
+                                    <b>Colour</b>
+                                    <p>Blue</p>
+                                </div>
+                                <div class="heading">
+                                    <b>Memory Storage Capacity </b>
+                                    <p>128 GB</p>
+                                </div>
+                                <div class="heading">
+                                    <b>Operating System </b>
+                                    <p>IOS 14</p>
+                                </div>
+                            </div>
+
+
+
+
 
                             <h4>
                                 <mat-icon>thumb_up_off_alt</mat-icon>About this item
