--- a/src/app/layout/category/category.component.html
+++ b/src/app/layout/category/category.component.html
@@ -5,7 +5,7 @@
             <div class="single-line" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px"
                 fxFlex.xl="1910px">
                 <b class="home" routerLink="/">Home</b>
-                <mat-icon>keyboard_arrow_right</mat-icon> <b><a>Fashion</a></b>
+                <mat-icon>keyboard_arrow_right</mat-icon> <b><a>Products</a></b>
             </div>
         </div>
     </div>
@@ -49,9 +49,9 @@
                                 <mat-icon>thumb_up_off_alt</mat-icon>Pros
                             </h4>
                             <ul>
-                                <li>Morbi purus libero, faucibus adipiscing, commodo quis </li>
-                                <li>Morbi purus libero, faucibus adipiscing, commodo quis </li>
-                                <li>Morbi purus libero, faucibus adipiscing, commodo quis </li>
+                                <li>6.1-inch Super Retina XDR display </li>
+                                <li>Supports MagSafe accessories for easy attach and faster wireless charging </li>
+                                <li>Advanced dual-camera system with 12MP Ultra Wide and Wide cameras </li>
                             </ul>
                         </div>
                     </div>
@@ -88,10 +88,10 @@
 
                 <div class="product-amazon">
                     <div class="text">
-                        <h3>New Apple iPhone 12 (64GB) - Blue</h3>
+                        <h3>Smart speaker with Alexa</h3>
                         <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
                             <div class="price">
-                                <u> ₹84,900 </u> ₹84,889
+                                <u>₹ 3,499</u> ₹ 4,499
                             </div>
                             <div class="star" fxLayout="row">
                                 <div class="review">
@@ -102,17 +102,17 @@
                                     <mat-icon>star</mat-icon>
                                 </div>
                                 <div class="viewer">
-                                    <b>(10 Reviews)</b>
+                                    <b>(112 Reviews)</b>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="product" fxLayout="column">
                         <div class="img">
-                            <a href="https://www.amazon.in/dp/B08L5WHFT9?&linkCode=li3&tag=stackasian-21&linkId=2ebacfa51f6ae8cb07ea47d683617b27&ref_=as_li_ss_il"
+                            <a href="https://www.amazon.in/Echo-Dot-3rd-Gen/dp/B07PKXJN7J?dchild=1&qid=1613207974&s=amazon-devices&sr=1-9&linkCode=li2&tag=stackasian-21&linkId=a4c6499ecc3571a29df3dc121666a6a8&ref_=as_li_ss_il"
                                 target="_blank"><img border="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B08L5WHFT9&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=stackasian-21"></a><img
-                                src="https://ir-in.amazon-adsystem.com/e/ir?t=stackasian-21&l=li3&o=31&a=B08L5WHFT9"
+                                    src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07PKXJN7J&Format=_SL160_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=stackasian-21"></a><img
+                                src="https://ir-in.amazon-adsystem.com/e/ir?t=stackasian-21&l=li2&o=31&a=B07PKXJN7J"
                                 width="1" height="1" border="0" alt=""
                                 style="border:none !important; margin:0px !important;" />
                         </div>
@@ -121,9 +121,8 @@
                                 <mat-icon>thumb_up_off_alt</mat-icon>Pros
                             </h4>
                             <ul>
-                                <li>Morbi purus libero, faucibus adipiscing, commodo quis </li>
-                                <li>Morbi purus libero, faucibus adipiscing, commodo quis </li>
-                                <li>Morbi purus libero, faucibus adipiscing, commodo quis </li>
+                                <li>Alexa can speak in both English & Hindi </li>
+                                <li>Make your home smart with Alexa and use voice to control lights, ACs, TVs, geysers, water motors and more. You can purchase smart lights, plugs and other accessories separately</li>
                             </ul>
                         </div>
                     </div>
@@ -132,7 +131,7 @@
                             <div class="img" fxLayout="row">
                                 <img
                                     src="https://images-eu.ssl-images-amazon.com/images/S/amazon-avatars-global/default._CR0,0,1024,1024_SX48_.png">
-                                <b>S.Siva Ram Kris</b>
+                                <b>Anirban Bhatt..</b>
                             </div>
                             <div class="star">
                                 <div class="review">
@@ -143,8 +142,8 @@
                                     <mat-icon>star</mat-icon>
                                 </div>
                                 <div class="reviewd">
-                                    <p> Another magnificence from Apple. I was updated from iPhone X and it was an
-                                        extraordinary involvement in all the most recent specs and impeccably smooth.
+                                    <p> 3rd gen product is just awesome. Very much improved version...indian english
+                                        accent is no longer the issue . Part sound quality is just awesome...
                                     </p>
                                 </div>
                             </div>
@@ -159,10 +158,11 @@
 
                 <div class="product-amazon">
                     <div class="text">
-                        <h3>New Apple iPhone 12 (64GB) - Blue</h3>
+                        <h3>Smart Home Camera
+                        </h3>
                         <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
                             <div class="price">
-                                <u> ₹84,900 </u> ₹84,889
+                                ₹ 2,899.00
                             </div>
                             <div class="star" fxLayout="row">
                                 <div class="review">
@@ -180,10 +180,10 @@
                     </div>
                     <div class="product" fxLayout="column">
                         <div class="img">
-                            <a href="https://www.amazon.in/dp/B08L5WHFT9?&linkCode=li3&tag=stackasian-21&linkId=2ebacfa51f6ae8cb07ea47d683617b27&ref_=as_li_ss_il"
+                            <a href="https://www.amazon.in/TP-Link-Wireless-Security-Tapo-C200/dp/B07XLML2YS?dchild=1&qid=1613207974&s=amazon-devices&sr=1-10&linkCode=li2&tag=stackasian-21&linkId=5b22b1290dadc45bab572859be9d3858&ref_=as_li_ss_il"
                                 target="_blank"><img border="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B08L5WHFT9&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=stackasian-21"></a><img
-                                src="https://ir-in.amazon-adsystem.com/e/ir?t=stackasian-21&l=li3&o=31&a=B08L5WHFT9"
+                                    src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07XLML2YS&Format=_SL160_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=stackasian-21"></a><img
+                                src="https://ir-in.amazon-adsystem.com/e/ir?t=stackasian-21&l=li2&o=31&a=B07XLML2YS"
                                 width="1" height="1" border="0" alt=""
                                 style="border:none !important; margin:0px !important;" />
                         </div>
@@ -192,9 +192,10 @@
                                 <mat-icon>thumb_up_off_alt</mat-icon>Pros
                             </h4>
                             <ul>
-                                <li>Morbi purus libero, faucibus adipiscing, commodo quis </li>
-                                <li>Morbi purus libero, faucibus adipiscing, commodo quis </li>
-                                <li>Morbi purus libero, faucibus adipiscing, commodo quis </li>
+                                <li>Up to 64GB SD card storage </li>
+                                <li> The camera angle is 110 degree and the connectivity is Wi-Fi IEEE 802.11 b/g/n 2.4 GHz </li>
+                                <li>Customer Care Detail : 1800 103 6286
+                                    </li>
                             </ul>
                         </div>
                     </div>
@@ -203,7 +204,7 @@
                             <div class="img" fxLayout="row">
                                 <img
                                     src="https://images-eu.ssl-images-amazon.com/images/S/amazon-avatars-global/default._CR0,0,1024,1024_SX48_.png">
-                                <b>S.Siva Ram Kris</b>
+                                <b>Abhishek Mazumder</b>
                             </div>
                             <div class="star">
                                 <div class="review">
@@ -214,9 +215,9 @@
                                     <mat-icon>star</mat-icon>
                                 </div>
                                 <div class="reviewd">
-                                    <p> Another magnificence from Apple. I was updated from iPhone X and it was an
-                                        extraordinary involvement in all the most recent specs and impeccably smooth.
-                                    </p>
+                                    <p> My Dad is 86 yrs old and staying home alone while we are at work..I have
+                                        installed the device to keep an watch that he is safe at home and to be
+                                        connected all the time.</p>
                                 </div>
                             </div>
                         </div>
@@ -227,12 +228,167 @@
                         </div>
                     </div>
                 </div>
+
+
+
+                <div class="product-amazon">
+                    <div class="text">
+                        <h3>3-Ply Cotton Face-Mask
+                        </h3>
+                        <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
+                            <div class="price">
+                                ₹ 487.00 - ₹ 312.00
+                            </div>
+                            <div class="star" fxLayout="row">
+                                <div class="review">
+                                    <mat-icon>star</mat-icon>
+                                    <mat-icon>star</mat-icon>
+                                    <mat-icon>star</mat-icon>
+                                    <mat-icon>star</mat-icon>
+                                    <mat-icon>star</mat-icon>
+                                </div>
+                                <div class="viewer">
+                                    <b>(10 Reviews)</b>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product" fxLayout="column">
+                        <div class="img">
+                            <a href="https://www.amazon.in/MediWeave-Meltblown-Reusable-Washable-Pattern/dp/B08H44TVMY?crid=2200D59ZSQHXT&dchild=1&keywords=mask+cotton+washable&qid=1613301368&s=industrial&sprefix=mask+cott%2Cindustrial%2C398&sr=1-9&linkCode=li2&tag=stackasian-21&linkId=03975c326cc2087ea79678570a7687a5&ref_=as_li_ss_il"
+                                target="_blank"><img border="0"
+                                    src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B08H44TVMY&Format=_SL160_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=stackasian-21"></a><img
+                                src="https://ir-in.amazon-adsystem.com/e/ir?t=stackasian-21&l=li2&o=31&a=B08H44TVMY"
+                                width="1" height="1" border="0" alt=""
+                                style="border:none !important; margin:0px !important;" />
+                        </div>
+                        <div class="text">
+                            <h4>
+                                <mat-icon>thumb_up_off_alt</mat-icon>Pros
+                            </h4>
+                            <ul>
+                                <li>Includes: Pack of 3 Adult Masks.
+                                    </li>
+                                <li>Fabric: Outer and Inner layer crafted with Fine Twill Quality. It's a 100% Soft Cotton </li>
+                                <li>Reusable & Washable Mask, can wash them upto 30 times </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="price-cart">
+                        <div class="start">
+                            <div class="img" fxLayout="row">
+                                <img
+                                    src="https://images-eu.ssl-images-amazon.com/images/S/amazon-avatars-global/default._CR0,0,1024,1024_SX48_.png">
+                                <b>Abhishek Mazumder</b>
+                            </div>
+                            <div class="star">
+                                <div class="review">
+                                    <mat-icon>star</mat-icon>
+                                    <mat-icon>star</mat-icon>
+                                    <mat-icon>star</mat-icon>
+                                    <mat-icon>star</mat-icon>
+                                    <mat-icon>star</mat-icon>
+                                </div>
+                                <div class="reviewd">
+                                    <p> Really Fantastic quality and design . Delighted with product and pricing
+                                        reasonable for quality unlike some of the rubbish you see for sale.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="addto-cart">
+                            <button routerLink="/view-product">
+                                <mat-icon>add_shopping_cart</mat-icon>Add to Cart
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="product-amazon">
+                    <div class="text">
+                        <h3>Wooden Furniture
+
+                        </h3>
+                        <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
+                            <div class="price">
+                                ₹ 16,599
+
+                            </div>
+                            <div class="star" fxLayout="row">
+                                <div class="review">
+                                    <mat-icon>star</mat-icon>
+                                    <mat-icon>star</mat-icon>
+                                    <mat-icon>star</mat-icon>
+                                    <mat-icon>star</mat-icon>
+                                    <mat-icon>star</mat-icon>
+                                </div>
+                                <div class="viewer">
+                                    <b>(10 Reviews)</b>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product" fxLayout="column">
+                        <div class="img">
+                            <a href="https://www.amazon.in/Furniture-World-Sheesham-Wooden-Dining/dp/B07NQMN2VV?&linkCode=li2&tag=stackasian-21&linkId=fcd236a6a004d318b9bb9b2e29e97a45&ref_=as_li_ss_il"
+                                target="_blank"><img border="0"
+                                    src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07NQMN2VV&Format=_SL160_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=stackasian-21"></a><img
+                                src="https://ir-in.amazon-adsystem.com/e/ir?t=stackasian-21&l=li2&o=31&a=B07NQMN2VV"
+                                width="1" height="1" border="0" alt=""
+                                style="border:none !important; margin:0px !important;" />
+                        </div>
+                        <div class="text">
+                            <h4>
+                                <mat-icon>thumb_up_off_alt</mat-icon>Pros
+                            </h4>
+                            <ul>
+                                <li>Table Size: Length 45 In x Width 32 IN x Height 30 IN, Chair: Height 34 IN x Width 17.5 IN x Length 17.5 IN, Bench: Length 70 cm X Width 40 cm x Height 45 cm </li>
+                                <li>12 Month Warranty Against Any Manufacturing Defects</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="price-cart">
+                        <div class="start">
+                            <div class="img" fxLayout="row">
+                                <img
+                                    src="https://images-eu.ssl-images-amazon.com/images/S/amazon-avatars-global/default._CR0,0,1024,1024_SX48_.png">
+                                <b>Vineet Singhal</b>
+                            </div>
+                            <div class="star">
+                                <div class="review">
+                                    <mat-icon>star</mat-icon>
+                                    <mat-icon>star</mat-icon>
+                                    <mat-icon>star</mat-icon>
+                                    <mat-icon>star</mat-icon>
+                                    <mat-icon>star</mat-icon>
+                                </div>
+                                <div class="reviewd">
+                                    <p> Arrived before time, very nicely packed. No damage in transit because of great
+                                        packing. Very Easy to assemble. High Quality at a Great Price. Best product for
+                                        a family.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="addto-cart">
+                            <button routerLink="/view-product">
+                                <mat-icon>add_shopping_cart</mat-icon>Add to Cart
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
+
+
 
             </div>
-            <div class="paginatiion">
+            <!-- <div class="paginatiion">
                 <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]">
                 </mat-paginator>
-            </div>
+            </div> -->
         </div>
     </div>
 </section>
