--- a/src/app/layout/category/category.component.scss
+++ b/src/app/layout/category/category.component.scss
@@ -5,9 +5,7 @@
     width: 100%;
     height: 55px;
 }
-section.home {
-    height: 100vh;
-}
+
 .top-line {
     margin: 0 auto;
 }
@@ -54,7 +52,7 @@ section.home {
 }
 .text ul li {
     font-family: "Open Sans", sans-serif;
-    font-size: 13px;
+    font-size: 12px;
     padding: 5px 0;
 }
 .price {
@@ -127,6 +125,8 @@ section.home {
     display: flex;
     place-content: center;
     align-items: center;
+    height: 255px;
+
 }
 .star mat-icon {
     width: auto;
@@ -189,4 +189,19 @@ section.home.amazonhome1 .product-amazon{
 section.home.amazonhome2 .product-amazon{
     width: 46%;
     margin: 9px;
+}
+section.home.amazonhome1 .img a {
+    height: 100%;
+    /* width: 200px; */
+}
+section.home.amazonhome1 .price {
+    padding: 4px 5px 4px 0px;
+    font-size: 11px;
+}
+
+section.home.amazonhome3 .text h3 {
+    height: 45px;
+}
+section.home.amazonhome3  .text {
+    padding: 0px 1pc;
 }
